ETH changes squashed - fix all feedback

--- a/src/pages/add/select-currency/select-currency.scss
+++ b/src/pages/add/select-currency/select-currency.scss
@@ -20,7 +20,4 @@ page-select-currency {
   .list-subtitle {
     padding-left: 20px;
   }
-  .import-list {
-    margin-top: 32px;
-  }
 }
